# tactilis

./: .env  .gitignore  AGENTS.md  README.md
Assets/: CameraFullBlackFade.cs  DynamicFireSpread.cs  MainGame.unity  RingFill Variant.prefab  RingFill.prefab  StretchBothways.preset
Assets/Plugins/Android/: AndroidManifest.xml  FRSUnityActivity.java
Assets/Scripts/RehabGame/: ARTablePlacer.cs  ArduinoFRSSketch.ino  RehabGameBootstrapper.cs  RehabGameManager.cs
Assets/XR/Settings/: OpenXRPackageSettings.asset
ProjectSettings/: ProjectSettings.asset
core/: Cargo.toml
core/src/: app.rs  arduino.rs  main.rs  protocol.rs  unity.rs
dashboard/: Cargo.toml
dashboard/crates/serial-monitor/: Cargo.toml
dashboard/crates/sollertia-core/: Cargo.toml
dashboard/crates/sollertia-ui/: Cargo.toml
dashboard/crates/sollertia-ui/src/: main.rs
game/: .env  .gitattributes  .gitignore  README.md  game.slnx
game/Assets/: CameraAutoFader.cs  EndGameFXDirector.cs  GroundSnapper.cs  HandsXR.unity  RingFill (1).prefab  SollertiaDemo.unity  TimeLabel.prefab  VRCircularCountdown.cs  VRQuickSetup.cs
game/Assets/Materials/: images.mat
game/Assets/Scenes/: SampleScene.scenetemplate  SampleScene.unity
game/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
game/Assets/Textures/: red.mat
game/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
game/My project (2)/: .gitignore
game/My project (2)/ProjectSettings/: EditorBuildSettings.asset  (+1 more)
game/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
hardware/: hardware.ino
(+74 files in other folders)
