[package]
name = "tactilis-core"
version = "0.1.0"
edition = "2021"
description = "Core dashboard for Tactilis rehabilitation system"
license = "GPL-3.0"

[dependencies]
# UI
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serial communication (Arduino)
serialport = "4.5"

# WebSocket (Unity communication)
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
