[package]
name = "sollertia-ui"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
serial2 = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sollertia-core = { path = "../sollertia-core" }
